syntax = "proto3";

package proto;

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse) {
    }

    rpc Logout (LogoutRequest) returns (LogoutResponse) {
    }

    rpc EditUser (EditRequest) returns (EditResponse) {
    }

    rpc Register (RegisterRequest) returns (RegisterResponse) {
    }

    rpc Follow (FollowRequest) returns (FollowResponse) {
    }

    rpc Followlist (FollowlistRequest) returns (FollowlistResponse) {
    }

    rpc AuthIdentity (AuthIdentityRequest) returns (AuthIdentityResponse) {
    }
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    uint32 code = 1;
    string msg = 2;
    uint32 userid   = 3;
    string username = 4;
    string nickname = 5;
    string email    = 6;
    string identity = 7;
}

message LogoutRequest {
    string identity = 1;
}

message LogoutResponse {
    uint32 code = 1;
    string msg = 2;
}

message RegisterRequest {
    uint32 userid   = 1;
    string username = 2;
    string nickname = 3;
    string email    = 4;
    string salt     = 5;
    string password = 6;
}

message RegisterResponse {
    uint32 code = 1;
    string msg = 2;
}

message EditRequest {
    string identity = 1;
    string nickname = 2;
    string password = 3;
    string email = 4;
}

message EditResponse {
    uint32 code = 1;
    string msg = 2;
    uint32 userid   = 3;
    string username = 4;
    string nickname = 5;
    string email    = 6;
}

message FollowRequest {
    string identity   = 1;
    uint32 followee   = 2;
}

message FollowResponse {
    uint32 code = 1;
    string msg = 2;
}

message FollowlistRequest {
    uint32 pageno = 1;
    uint32 count = 2;
    string identity = 3;
}

message SingleUser {
    uint32 userid   = 1;
    string username = 2;
    
}

message FollowlistResponse {
    uint32 code = 1;
    string msg = 2;
    // SingleUser
    repeated SingleUser users = 3;
}

message AuthIdentityRequest {
    string identity = 1;
}

message AuthIdentityResponse {
    uint32 code = 1;
    string msg = 2;
}